Update some info

--- a/CN_2page_modified/CN_twopage.tex
+++ b/CN_2page_modified/CN_twopage.tex
@@ -168,21 +168,27 @@
     \vspace{-5pt}
   \resumeSubHeadingListEnd
 
-
-
-
 %-----------EXPERIENCE-----------------
 \sectionwithbox{经验~与~项目}
   \resumeSubHeadingListStart
   
     \resumeSubheading
+      {Owlii~\color{blue}\href{http://www.owlii.com}{[网站]}}{中国~北京}
+      {\textbf{软件工程实习生}}{2017.3 - Present (1 mo)}
+      \resumeItemListStart
+        \resumeItem{CUDA GPU 编程}\\
+        \vspace{1mm}
+          {- 使用~CUDA 实现及加速算法}\\
+      \resumeItemListEnd
+  
+    \resumeSubheading
       {清华大学~\color{blue}\href{http://fi.ee.tsinghua.edu.cn}{[实验室网站]}}{中国~北京}
-      {\textbf{研究助理} @ 未来通信与网络实验室}{2016.4 - Present (9 mo)}
+      {\textbf{研究助理} @ 未来通信与网络实验室}{2016.4 - Present (11 mo)}
       \resumeItemListStart
 
         \resumeItem{网络视频服务用户行为大数据挖掘}{(已完成, 论文已提交)}\\
         \vspace{1mm}
-          {- 数据挖掘：一个\underline{TB级别的数据集，包括~2~个月，1~千万用户}在各种视频网站的观看记录，包括优酷，爱奇艺，搜狐，乐视，腾讯，看看，等等}\\
+          {- 数据挖掘：一个\underline{TB级别的数据集，包括~2~个月，1~千万用户}在各种视频网站的观看记录}\\
           {- 研究用户切换视频网站观看的行为，发现潜在迁移的原因}\\
           {- 负责绝大多数的数据处理以及分析工作} \\
           {~~~~- 使用~Java~编写 \underline{上百个 Hadoop MapReduce 程序}, 以及使用~Python~处理资料}\\
@@ -191,9 +197,7 @@
         \resumeItem{在线购物用户行为大数据挖掘}{(已完成, 论文已提交)}\\
         \vspace{1mm}
           {- 数据挖掘：一个包括\underline{~30~天，100万京东用户}的浏览商品记录}\\
-          {~~~~- 发现用户浏览商品时的潜在行为} \\
-          {~~~~- 负责绝大多数的数据处理以及分析工作~(与前一个项目技能点相同)}\\
-          
+          {~~~~- 发现用户浏览商品时的潜在行为，负责绝大多数的数据处理以及分析工作~(与前一个项目技能点相同)}\\
       \resumeItemListEnd
   
     \resumeSubheading
@@ -219,26 +223,22 @@
       \resumeItemListStart
         \resumeItem{网站开发: \color{blue}\href{http://github.com/eesast/ts17web}{\textbf{[github仓库]}}}\\
         \vspace{1mm}
-          {- 带领~2016~清华大学队式程序设计大赛~网站组}\\
+          {- 带领~2016~清华大学队式程序设计大赛~网站组, 协同工作, 使用~\emph{Git}~进行版本控制. }\\
           {~~~~- 使用~\href{http://www.yiiframework.com}{\emph{Yii framework}~编写后端 (PHP, MVC)}.}\\
           {~~~~- 使用~\emph{MySQL}, \emph{phpMyAdmin}设计并实现了大部分的数据结构}\\
           {~~~~- 编写大部分的功能：包括 注册、登陆、在线对战、论坛、代码提交, 等等}\\
-          {- 协同工作, 使用~\emph{Git}~进行版本控制. }
       \resumeItemListEnd
 
     \resumeSubheading
       {清华创客空间~\color{blue}\href{http://www.thumaker.cn}{[网站]}}{中国~北京}
-      {\textbf{副会长}, 2 年创客领域经验}{2015.9 - Present (1.5 yrs)}
+      {\textbf{副会长}, 2 年创客领域经验}{2015.9 - 2017.2 (1.5 yrs)}
       \resumeItemListStart
         \resumeItem{每周举办~创意周末以及创客比赛: }\\
         \vspace{1mm}
           {- 清华创客空间是中国最大最有影响力的创客空间之一} \\
           {~~~~- 我们曾经收到李克强总理的回信 \color{blue}\href{http://www.moe.edu.cn/publicfiles/business/htmlfiles/moe/moe_838/201505/186765.html}{~\textbf{[媒体报导]}}}\\
-          {- 带领~\underline{\emph{项目部}}, \underline{\emph{外联部}}, \underline{\emph{常务部}} 工作 }\\
-          {~~~~- 负责每周举办的创意周末以及创客比赛}\\
+          {- 带领~\underline{\emph{项目部}}, \underline{\emph{外联部}}, \underline{\emph{常务部}} 工作，负责每周举办的创意周末以及创客比赛}\\
           {~~~~- 比如 \emph{Arduino}, \emph{Processing}, \emph{3D 建模}, \emph{设计思维}, \emph{头脑风暴}的工作坊、教学, 等等} \\
-          {- 带领过一些项目，也是很多创客马拉松比赛的得奖者}\\
-
       \resumeItemListEnd
       
   \resumeSubHeadingListEnd
