--- a/twopage/CN_twopage.tex
+++ b/twopage/CN_twopage.tex
@@ -132,11 +132,13 @@
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
   \color{blue}\textbf{\href{http://lzhbrian.me/}{\Large 林子恒~Tzu-Heng Lin (Brian) \small Maker, Hacker}} & 
   个人网站 : \color{blue}\href{http://lzhbrian.me/}{http://lzhbrian.me} \\
-  \small~~~~出生于 \textbf{台湾}, 长大于 \textbf{上海}, 目前在 \textbf{北京}学习 & 邮箱 : \href{mailto:lzhbrian@gmail.com}{lzhbrian@gmail.com}\\
+  %\small~~~~
+  出生于 \textbf{台湾}, 长大于 \textbf{上海}, 目前在 \textbf{北京}学习 & 邮箱 : \href{mailto:lzhbrian@gmail.com}{lzhbrian@gmail.com}\\
   
-   ~{目前} : 清华大学电子工程系~本科三年级~(预计~2018 年毕业) & 手机 : +86-131-2192-9165 \\
+   清华大学电子工程系~本科三年级~(2018 年毕业) & 手机 : +86-131-2192-9165 \\
 
-   ~{求职} : 2017 年暑期实习~(软件工程/研发) &
+   %~{求职} : 2017 年暑期实习~(软件工程/研发) 
+   &
    	\color{blue}\href{http://www.linkedin.com/in/lzhbrian}{\textbf{[Linkedin领英]}}
 	\color{blue}\href{http://www.github.com/lzhbrian}{\textbf{[Github]}}
 \end{tabular*}
@@ -147,8 +149,8 @@
   \resumeSubHeadingListStart
     \resumeSubheadingedu
       {清华大学}{中国~北京}
-      {工学学士~-~电子工程}{~GPA: 84/100}{2014.8 - 2018.6}
-      {管理学学士~-~工商管理 (第二学位)}{~GPA: 87/100}
+      {工学学士~-~电子工程}{~}{2014.8 - 2018.6}
+      {管理学学士~-~工商管理 (第二学位)}{~}
   \resumeSubHeadingListEnd
 
 %--------PROGRAMMING SKILLS------------
@@ -157,13 +159,13 @@
     \item{
       \textbf{编程语言}{: Python, C/C++, Matlab, R}
       \hfill
-      \textbf{工具}{: Git, Hadoop, Weka, MySQL, Tableau}
+      \textbf{工具}{: Git, Hadoop, CUDA, Qt, Weka, MySQL}
     \vspace{-7pt}
     }
   \resumeSubHeadingListEnd
   \resumeSubHeadingListStart
     \item{
-      \textbf{Experienced in}{: Big Data Analytics, Software Engineering, Playing around new Tools and Toys, Leadership}
+      \textbf{Experienced in}{: Big Data Analytics, Software Engineering, Fast learner, Leadership}
     }
     \vspace{-5pt}
   \resumeSubHeadingListEnd
@@ -174,7 +176,7 @@
   
     \resumeSubheading
       {Owlii~\color{blue}\href{http://www.owlii.com}{[网站]}}{中国~北京}
-      {\textbf{软件工程实习生}}{2017.3 - Present (1 mo)}
+      {\textbf{软件工程实习生}}{2017.3 - Present (3 mo)}
       \resumeItemListStart
         \resumeItem{CUDA GPU 编程}\\
         \vspace{1mm}
@@ -183,18 +185,17 @@
   
     \resumeSubheading
       {清华大学~\color{blue}\href{http://fi.ee.tsinghua.edu.cn}{[实验室网站]}}{中国~北京}
-      {\textbf{研究助理} @ 未来通信与网络实验室}{2016.4 - Present (11 mo)}
+      {\textbf{研究助理} @ 未来通信与网络实验室}{2016.4 - Present (13 mo)}
       \resumeItemListStart
 
-        \resumeItem{网络视频服务用户行为大数据挖掘}{(已完成, 论文已提交)}\\
+        \resumeItem{网络视频服务用户行为大数据挖掘}\\
         \vspace{1mm}
           {- 数据挖掘：一个\underline{TB级别的数据集，包括~2~个月，1~千万用户}在各种视频网站的观看记录}\\
           {- 研究用户切换视频网站观看的行为，发现潜在迁移的原因}\\
-          {- 负责绝大多数的数据处理以及分析工作} \\
           {~~~~- 使用~Java~编写 \underline{上百个 Hadoop MapReduce 程序}, 以及使用~Python~处理资料}\\
           {~~~~- 使用~Matlab~,~R~分析及可视化数据}\\
 
-        \resumeItem{在线购物用户行为大数据挖掘}{(已完成, 论文已提交)}\\
+        \resumeItem{在线购物用户行为大数据挖掘}\\
         \vspace{1mm}
           {- 数据挖掘：一个包括\underline{~30~天，100万京东用户}的浏览商品记录}\\
           {~~~~- 发现用户浏览商品时的潜在行为，负责绝大多数的数据处理以及分析工作~(与前一个项目技能点相同)}\\
@@ -209,7 +210,7 @@
           {- \href{https://www.sinica.edu.tw/ch}{中央研究院} 是台湾的最高学术机构}\\
           {- 数据挖掘：一个包括台湾\underline{~20~万个Facebook粉丝专页的数据集，包括有~2800~万个贴文内容，以及点赞记录}}\\
           {~~~~- 发现贴文的潜在规律，以及粉丝专页真正的属性}\\
-          {~~~~- 技能点包括：\emph{统计学}, \emph{机器学习}, \emph{文本挖掘}, \emph{时间序列分析}}
+          %{~~~~- 技能点包括：\emph{统计学}, \emph{机器学习}, \emph{文本挖掘}, \emph{时间序列分析}}
         \resumeItem{台湾资料科学年会~志愿者} {\color{blue}\href{http://www.datasci.tw}{[网站]}} \\
       \resumeItemListEnd
 
