--- a/twopage/ENG_twopage.tex
+++ b/twopage/ENG_twopage.tex
@@ -130,8 +130,8 @@
   \small~~~~Born in \emph{Taiwan}, Grown up in \emph{Shanghai}, now Studying in \emph{Beijing} (will graduate in 2018) & Email : \href{mailto:lzhbrian@gmail.com}{lzhbrian@gmail.com}\\
   
    ~Currently : Junior student in \emph{Dept.of Electronic Engineering, Tsinghua University} & Mobile : +86-131-2192-9165 \\
-
-   ~\underline{Objective : \emph{Seeking Summer Internship in 2017}} &
+&
+   %~\underline{Objective : \emph{Seeking Summer Internship in 2017}} &
    	\color{blue}\href{http://www.linkedin.com/in/lzhbrian}{\textbf{[Linkedin]}}
 	\color{blue}\href{http://www.github.com/lzhbrian}{\textbf{[Github]}}
 \end{tabular*}
@@ -142,8 +142,8 @@
   \resumeSubHeadingListStart
     \resumeSubheadingedu
       {Tsinghua University (Dual Degree)}{Beijing, China}
-      {Bachelor of Science in Electronic Information}{GPA: 84/100}{Aug 2014 - June 2018}
-      {Bachelor of Business Administration in Management (2nd Degree)}{GPA: 87/100}
+      {Bachelor of Science in Electronic Information}{}{Aug 2014 - June 2018}
+      {Bachelor of Business Administration in Management (2nd Degree)}{}
   \resumeSubHeadingListEnd
 
 %--------PROGRAMMING SKILLS------------
@@ -152,10 +152,17 @@
     \item{
       \textbf{Languages}{: Python, C/C++, Matlab, R}
       \hfill
-      \textbf{Technologies}{: Git, Hadoop, Weka, MySQL, Tableau}
+      \textbf{Tools}{: Git, Hadoop, CUDA, Qt, Weka, MySQL}
     }
+    \vspace{-7pt}
   \resumeSubHeadingListEnd
-
+  
+  \resumeSubHeadingListStart
+    \item{
+      \textbf{Experienced in}{: Big Data Analytics, Software Engineering, Fast learner, Leadership}
+    }
+    \vspace{-5pt}
+  \resumeSubHeadingListEnd
 
 
 %-----------EXPERIENCE-----------------
@@ -163,19 +170,28 @@
   \resumeSubHeadingListStart
   
     \resumeSubheading
-      {Tsinghua University \color{blue}\href{http://fi.ee.tsinghua.edu.cn}{[link]}}{Beijing, China}
-      {\textbf{Research Assistant} in Future Communication \& Internet Lab}{Apr 2016 - Present (9 mo)}
+      {Owlii \color{blue}\href{http://www.owlii.com}{[link]}}{Beijing, China}
+      {\textbf{Software Engineer Intern}}{Mar 2016 - Present (1 mo)}
       \resumeItemListStart
 
-        \resumeItem{Online Video Consumption Behaviors Analysis}{(Finished, Paper submitted)}\\
+        \resumeItem{CUDA GPU Parallel Programming}\\
         \vspace{1mm}
-          {- Mining a \underline{TB-scale, 2-Month, 10-Million-User} dataset from an ISP including viewing records of most main Video Content Providers, including Youku, IQIYI, Sohu, LeTV, Tencent, KanKan, etc.}\\
-          {- Studied the migratory behaviors of users, found potential migratory reasons.}\\
-          {- Responsible for all of the data processing and analysis work.} \\
+          {- Implement and accelerate algorithms with CUDA.}\\
+      \resumeItemListEnd
+  
+  
+    \resumeSubheading
+      {Tsinghua University \color{blue}\href{http://fi.ee.tsinghua.edu.cn}{[link]}}{Beijing, China}
+      {\textbf{Research Assistant} in Future Communication \& Internet Lab}{Apr 2016 - Present (11 mo)}
+      \resumeItemListStart
+
+        \resumeItem{Online Video Consumption Behaviors Analysis}\\
+        \vspace{1mm}
+          {- Mining a \underline{TB-scale, 2-Month, 10-Million-User} dataset from an ISP including viewing records of most main Video Content Providers. Studied the migratory behaviors of users, found potential migratory reasons.}\\
           {~~~~- Written \underline{hundreds of Hadoop MapReduce programs} in Java and also used Python to process the data.}\\
           {~~~~- Analyzed and Visualized the data using Matlab and R.}\\
 
-        \resumeItem{Online Shopping Behaviors Analysis}{(Finished, Paper submitted)}\\
+        \resumeItem{Online Shopping Behaviors Analysis}\\
         \vspace{1mm}
           {- Mining a \underline{30-Day, Million-User-scale} dataset of JD online shopping viewing log.}\\
           {- Discovered unique user behaviors when browsing.} \\
@@ -192,8 +208,7 @@
           {- \href{https://www.sinica.edu.tw/ch}{\emph{Academia Sinica}} is the Top National Academy of Taiwan.}\\
           {- Research in a dataset with more than \underline{200,000 Facebook \emph{Fan Pages}, 28 million \emph{posts} with \emph{like} records} in Taiwan.}\\
           {~~~~- Found patterns in posts and real categories of pages.}\\
-          {~~~~- Skills including \emph{Statistics}, \emph{Machine Learning}, \emph{Text Mining}, \emph{Time Series Analysis}.}
-        \resumeItem{Volunteer, Data Science in Taiwan Conference} {\color{blue}\href{http://www.datasci.tw}{[link]}} \\
+
       \resumeItemListEnd
 
     \resumeSubheading
@@ -209,13 +224,13 @@
           {- Led the Web Development Team of \emph{Tsinghua Teamstyle Programming Competition 2016}.}\\
           {~~~~- Built the backend using \href{http://www.yiiframework.com}{\emph{Yii framework} (PHP, MVC)}.}\\
           {~~~~- Designed and Built most data structures using \emph{MySQL}, \emph{phpMyAdmin}.}\\
-          {~~~~- Implemented most of the features, including \emph{Register}, \emph{Login}, \emph{Online Battle}, \emph{Forum} and \emph{Code submit}, etc.}\\
           {- Co-work, version control using \emph{Git}. }
       \resumeItemListEnd
 
+
     \resumeSubheading
       {THU MakerSpace \color{blue}\href{http://www.thumaker.cn}{[link]}}{Beijing, China}
-      {\textbf{Vice President}, 2 years experience in maker field}{Sep 2015 - Present (1.5 yrs)}
+      {\textbf{Vice President}, 2 years experience in maker field}{Sep 2015 - Feb 2017 (1.5 yrs)}
       \resumeItemListStart
         \resumeItem{Maker Events and Competitions held weekly: }\\
         \vspace{1mm}
@@ -225,7 +240,6 @@
           {~~~~- Responsible for the Maker Events and Competitions held weekly}\\
           {~~~~- Such as \emph{Arduino Tutorial}, \emph{Processing}, \emph{3D modeling}, \emph{Design thinking} and \emph{Brain Storming} Workshops, etc.} \\
           {- Directed several projects, and also Winners of many Make-a-thons.}\\
-
       \resumeItemListEnd
       
   \resumeSubHeadingListEnd
@@ -256,8 +270,7 @@
             {- Role: \underline{\textbf{\emph{Team Leader}}} \& \underline{\textbf{\emph{Software Eng.}}}, won the \underline{5th place out of 300 teams} all over the world in 2015.} \\
             {~~~- Led \& organized the team. Started the project.} \\
             {~~~- \emph{iOS app development} using \emph{Swift} with \emph{Xcode}.} \\
-              {~~~~~~- Built features include \emph{TableView present}, \emph{SideMenu}, \emph{Customized Tab Button}, \emph{Customized Segue Effect}.} \\
-              {~~~~~~- Implemented \emph{QR Code} support which could connect mobile devices with the hardware.} \\
+              {~~~~~~- Built features include \emph{TableView}, \emph{SideMenu}, \emph{Customized Tab Button}, \emph{Customized Segue Effect}, \emph{QRCode}.} \\
             {~~~- \emph{Design}, \emph{3D modeling}, \emph{3D printing} and \emph{Laser cutting} to build to whole prototype.}
         \resumeItemListEnd
 
@@ -356,9 +369,10 @@
 %--------PUBLICATIONS------------
 \sectionwithbox{Publications}
   \resumeSubHeadingListStart
-	\resumeSubheadingPublication{H.Yan, \textbf{T.Lin}, G.Wang, Y.Li, H.Zheng, D.Jin, and B.Zhao, On Migratory Behavior in Video Consumption, \emph{Conference Paper Submitted}.}
-	\resumeSubheadingPublication{H.Yan, \textbf{T.Lin}, C.Gao, Y.Li, and D.Jin, On the Understanding of User Behaviors Over Multiple Video Content Providers, \emph{Journal Paper Submitted}.}
-	\resumeSubheadingPublication{H.Yan, Z.Wang, \textbf{T.Lin}, Y.Li, Y.Wang, and D.Jin, Profiling Users by Online Shopping Behaviors, \emph{Conference Poster Paper Submitted}.}
+  	\resumeSubheadingPublication{H.Yan, \large\textbf{TH.Lin}\normalsize, G.Wang, Y.Li, H.Zheng, D.Jin, and B.Zhao, A First Look at User Switching Behaviors Over Multiple Video Content Providers. \textbf{In AAAI ICWSM '17}}
+	\resumeSubheadingPublication{H.Yan, \large\textbf{TH.Lin}\normalsize, G.Wang, Y.Li, H.Zheng, D.Jin, and B.Zhao, On Migratory Behavior in Video Consumption, \emph{Conference Paper Submitted}.}
+	\resumeSubheadingPublication{H.Yan, \large\textbf{TH.Lin}\normalsize, C.Gao, Y.Li, and D.Jin, On the Understanding of User Behaviors Over Multiple Video Content Providers, \emph{Journal Paper Submitted}.}
+	\resumeSubheadingPublication{H.Yan, Z.Wang, \large\textbf{TH.Lin}\normalsize, Y.Li, Y.Wang, and D.Jin, Profiling Users by Online Shopping Behaviors, \emph{Conference Poster Paper Submitted}.}
   \resumeSubHeadingListEnd
   
   
