--- a/CV/cv.tex
+++ b/CV/cv.tex
@@ -12,6 +12,9 @@
 % License:
 % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
 %
+% Edited:
+% lzhbrian
+%
 % Important:
 % This template needs to be compiled using XeLaTeX
 %
