--- a/CV/cv.tex
+++ b/CV/cv.tex
@@ -165,8 +165,9 @@ Reviewer, \emph{IEEE TNSM} (IEEE Transactions on Network and Service Management)
 Data Mining, 
 Machine Learning, 
 User Behavior Analysis\\
-Startup\\
+Startup, Business Model\\
 \years{Familiar}
+Math (Calculus, Linear Algebra, Discrete Mathematics, Probability, Stochastic Process)
 Computer Vision\\
 Computer Network\\
 Computer Architecture \\
@@ -246,7 +247,7 @@ Huan Yan, \textbf{Tzu-Heng Lin}, Ming Zeng, Jing Wu, Jiaxin Huang,
 Yong Li, Depeng Jin.
 Characterizing the Usage of Mobile Video Service in Cellular Networks, 
 In Proceedings of 2017 IEEE Global Communications Conference: Communications Software,
-Services and Multimedia Apps, Singapore, Dec 2017\\
+Services and Multimedia Apps, Singapore, Dec 2017, to appear\\
 \years{ICWSM'17} 
 Huan Yan, \textbf{Tzu-Heng Lin}, Gang Wang, Yong Li, Haitao Zheng, Depeng Jin, Ben Y. Zhao.
 A First Look at User Switching Behaviors Over Multiple Video Content Providers. 
