--- a/CV/cv.tex
+++ b/CV/cv.tex
@@ -156,43 +156,40 @@ Reviewer, \emph{IEEE TNSM} (IEEE Transactions on Network and Service Management)
 
 
 %----------------------------------------------------------------------------------------
-%   Technology skills
+%	PUBLICATIONS AND TALKS SECTION
 %----------------------------------------------------------------------------------------
 
-\section*{Skills}
-\subsection*{Knowledge}
-\years{Experienced}
-Data Mining, 
-Machine Learning, 
-User Behavior Analysis\\
-Startup, Business Model\\
-\years{Familiar}
-Math (Calculus, Linear Algebra, Discrete Mathematics, Probability, Stochastic Process)
-Computer Vision\\
-Computer Network\\
-Computer Architecture \\
-Software Engineering\\
-Signal Processing, Electronic Circuit Design
+\section*{Publications}
+\subsection*{Conference}
+\years{\textbf{ACM \\CIKM'17}}
+Huan Yan, \textbf{Tzu-Heng Lin}, Gang Wang, Yong Li, Haitao Zheng, Depeng Jin and Ben Zhao.
+On Migratory Behavior in Video Consumption.
+In Proceedings of The 26th ACM International Conference on Information and Knowledge Management, Singapore, November 2017, to appear\\
+\years{\textbf{IEEE \\Globecom'17}}
+Huan Yan, \textbf{Tzu-Heng Lin}, Ming Zeng, Jing Wu, Jiaxin Huang,
+Yong Li, Depeng Jin.
+Characterizing the Usage of Mobile Video Service in Cellular Networks, 
+In Proceedings of 2017 IEEE Global Communications Conference: Communications Software,
+Services and Multimedia Apps, Singapore, Dec 2017, to appear\\
+\years{\textbf{AAAI \\ICWSM'17}}
+Huan Yan, \textbf{Tzu-Heng Lin}, Gang Wang, Yong Li, Haitao Zheng, Depeng Jin, Ben Y. Zhao.
+A First Look at User Switching Behaviors Over Multiple Video Content Providers. 
+In Proceedings of International AAAI Conference on Web and Social Media, Montreal, Canada,
+May 2017\\
+\years{\textbf{ACM \\CoNEXT'17}}
+\textbf{Tzu-Heng Lin}, Yong Li, Pengyu Zhang.
+In-app User Clicking Behavior Identification via Mobile Traffic Mining.
+\textbf{Submitted to ACM CoNEXT'17}
+\subsection*{Journal}
+\years{\textbf{IEEE \\TNSM}}
+Huan Yan, \textbf{Tzu-Heng Lin}, Chuhan Gao, Yong Li, Depeng Jin.
+On the Understanding of User Behaviors Over Multiple Video Content Providers.
+\textbf{Submitted to IEEE TNSM}\\
+\years{\textbf{Springer}}
+Huan Yan, Zhifeng Wang, \textbf{Tzu-Heng Lin}, Yong Li, Depeng Jin.
+Profiling Users by Online Shopping Behaviors.
+\textbf{Submitted to Multimedia Tools and Applications, Springer}
 
-
-
-\subsection*{Programming Languages}
-\years{Experienced} Python, Matlab, C/C++\\
-\years{Familiar} Shell Script, R, Verilog, Java, HTML, CSS, SQL
-\subsection*{Tools \& Softwares}
-\years{Experienced} git, Hadoop, Qt, CUDA, \LaTeX\\
-                    Linux, OSX\\
-\years{Familiar} CMake, gcc, g++\\
-                 OpenCV, Dlib\\
-                 Meshlab, Meshlabserver (Contributor on Github)\\
-                 Weka, Tableau, theano, DL4J\\
-                 gem5, Wireshark, Multisim, Modelsim\\
-                 Arduino, Processing, SketchUp, 3D printer\\
-                 Web Dev (Django,Yii), iOS Dev (Xcode), Android Dev (Android Studio)
-\subsection*{Languages}
-\years{Native} Mandarin\\
-\years{Fluent}English (TOEFL 102, TOEIC 910, GEPT high-intermediate)\\
-\years{Basic} Taiwanese, Shanghainese
 
 
 %----------------------------------------------------------------------------------------
@@ -237,62 +234,48 @@ Social Work Excellence Scholarship, Tsinghua University
 
 
 %----------------------------------------------------------------------------------------
-%	PUBLICATIONS AND TALKS SECTION
+%   Technology skills
 %----------------------------------------------------------------------------------------
 
-\section*{Publications}
-\subsection*{Conference}
-\years{Globecom'17} 
-Huan Yan, \textbf{Tzu-Heng Lin}, Ming Zeng, Jing Wu, Jiaxin Huang,
-Yong Li, Depeng Jin.
-Characterizing the Usage of Mobile Video Service in Cellular Networks, 
-In Proceedings of 2017 IEEE Global Communications Conference: Communications Software,
-Services and Multimedia Apps, Singapore, Dec 2017, to appear\\
-\years{ICWSM'17} 
-Huan Yan, \textbf{Tzu-Heng Lin}, Gang Wang, Yong Li, Haitao Zheng, Depeng Jin, Ben Y. Zhao.
-A First Look at User Switching Behaviors Over Multiple Video Content Providers. 
-In Proceedings of International AAAI Conference on Web and Social Media, Montreal, Canada,
-May 2017\\
-\years{CoNEXT'17}
-\textbf{Tzu-Heng Lin}, Yong Li, Pengyu Zhang.
-In-app User Clicking Behavior Identification via Mobile Traffic Mining.
-\textbf{Submitted to ACM CoNEXT'17}\\
-\years{CIKM'17}
-Huan Yan, \textbf{Tzu-Heng Lin}, Gang Wang, Yong Li, Haitao Zheng, Depeng Jin and Ben Zhao.
-On Migratory Behavior in Video Consumption.
-\textbf{Submitted to ACM CIKM'17}
-\subsection*{Journal}
-\years{TNSM}
-Huan Yan, \textbf{Tzu-Heng Lin}, Chuhan Gao, Yong Li, Depeng Jin.
-On the Understanding of User Behaviors Over Multiple Video Content Providers.
-\textbf{Submitted to IEEE TNSM}
+\section*{Skills}
+\subsection*{Knowledge}
+\years{Experienced}
+Data Mining, 
+Machine Learning, 
+User Behavior Analysis\\
+Startup, Business Model\\
+\years{Familiar}
+Math (Calculus, Linear Algebra, Discrete Mathematics, Probability, Stochastic Process)
+Computer Vision\\
+Computer Network\\
+Computer Architecture \\
+Software Engineering\\
+Signal Processing, Electronic Circuit Design
 
 
 
-% \years{1901}Einstein, Albert (1901), “Folgerungen aus den Capillaritätserscheinungen (Conclusions Drawn from the Phenomena of Capillarity)", \emph{Annalen der Physik} 4: 513\\
-% \years{1905a}Einstein, Albert (1905), “On a Heuristic Viewpoint Concerning the Production and Transformation of Light", \emph{Annalen der Physik} 17: 132–148.\\
-% \years{1905b}Einstein, Albert (1905), A new determination of molecular dimensions. \emph{PhD dissertation}.\\
-% \years{1905c}Einstein, Albert (1905), “On the Motion—Required by the Molecular Kinetic Theory of Heat—of Small Particles Suspended in a Stationary Liquid", \emph{Annalen der Physik} 17: 549–560.\\
-% \years{1905d}Einstein, Albert (1905), “On the Electrodynamics of Moving Bodies", \emph{Annalen der Physik} 17: 891–921.\\
-% \years{1905e}Einstein, Albert (1905), “Does the Inertia of a Body Depend Upon Its Energy Content?", \emph{Annalen der Physik} 18: 639–641.\\
-% \years{1915}Einstein, Albert (1915), “Die Feldgleichungen der Gravitation (The Field Equations of Gravitation)", \emph{Koniglich Preussische Akademie der Wissenschaften}: 844–847\\
-% \years{1917a}Einstein, Albert (1917), “Kosmologische Betrachtungen zur allgemeinen Relativitätstheorie (Cosmological Considerations in the General Theory of Relativity)", \emph{Koniglich Preussische Akademie der Wissenschaften}\\
-% \years{1917b}Einstein, Albert (1917), “Zur Quantentheorie der Strahlung (On the Quantum Mechanics of Radiation)", \emph{Physikalische Zeitschrift} 18: 121–128
-
-%------------------------------------------------
-
-% \subsection*{Books}
-
-% \years{1954}Einstein, Albert (1954), \emph{Ideas and Opinions}, New York: Random House, ISBN 0-517-00393-7
-
-% %------------------------------------------------
-
-% \subsection*{Newspaper articles}
-
-% \years{1940}Einstein, Albert, et al. (December 4, 1948), “To the editors", \emph{New York Times}\\
-% \years{1949}Einstein, Albert (May 1949), “Why Socialism?", \emph{Monthly Review}.
+\subsection*{Programming Languages}
+\years{Experienced} Python, Matlab, C/C++\\
+\years{Familiar} Shell Script, R, Verilog, Java, HTML, CSS, SQL
+\subsection*{Tools \& Softwares}
+\years{Experienced} git, Hadoop, Qt, CUDA, \LaTeX\\
+                    Linux, OSX\\
+\years{Familiar} CMake, gcc, g++\\
+                 OpenCV, Dlib\\
+                 Meshlab, Meshlabserver (Contributor on Github)\\
+                 Weka, Tableau, theano, DL4J\\
+                 gem5, Wireshark, Multisim, Modelsim\\
+                 Arduino, Processing, SketchUp, 3D printer\\
+                 Web Dev (Django,Yii), iOS Dev (Xcode), Android Dev (Android Studio)
+\subsection*{Languages}
+\years{Native} Mandarin\\
+\years{Fluent}English (TOEFL 102, TOEIC 910, GEPT high-intermediate)\\
+\years{Basic} Taiwanese, Shanghainese
 
 
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \clearpage
 \section*{Courses taken}
 
@@ -300,7 +283,7 @@ On the Understanding of User Behaviors Over Multiple Video Content Providers.
 \years{CS344} Intro to Parallel Programming (GPU) (Udacity)
 
 \subsection*{B.S. in Electronic Information}
-\years{Computer \\Science related}
+\years{Computer \\Science \\related}
 Introduction to Information Science and Technology\\
 Introduction to Electronic Information Science and Technology (1)(2)\\
 Operating System\\
@@ -345,7 +328,7 @@ Signals and Systems\\
 Digital Signal Processing
 
 \subsection*{B.B.A in Management (2nd Degree)}
-\years{Economics and \\Management \\related}
+\years{Economics \\and \\Management \\related}
 Accounting Principles\\
 Principles of Economics\\
 Business 101\\
@@ -356,7 +339,7 @@ Intellectual Property\\
 Information Systems\\
 Corporate Finance\\
 Organizational Behavior\\
-\years{Startup related}
+\years{Startup \\related}
 Innovation and entreprenuership: insight from Silicon Valley\\
 How To Start a Startup - Face To Face with Famous Entrepreneurs\\
 Social innovation and entrepreneurship\\
