Update resume's publication

--- a/resume/cn.tex
+++ b/resume/cn.tex
@@ -198,8 +198,8 @@
       {\href{http://fi.ee.tsinghua.edu.cn}{清华大学}}{中国~北京}
       {\textbf{研究助理} in 未来通信与网络实验室}{2016.4 - Present (1.5 yr)}
       \resumeItemListStart
-   \resumeItem{已发表/接受: AAAI ICWSM, IEEE Globecom}\\
-   \resumeItem{已提交: ACM CoNEXT, ACM CIKM, IEEE TNSM}\\
+   \resumeItem{已发表/接受: AAAI ICWSM, IEEE Globecom, ACM CIKM}\\
+   \resumeItem{已提交: ACM CoNEXT, IEEE TNSM}\\
    \resumeItem{大数据、用户画像分析~多个项目}\\
         \vspace{1.5mm}
    {- 包括~网络视频服务用户行为挖掘, 在线购物用户行为挖掘, 应用内用户行为识别, 等等.}\\
