--- a/resume/eng.tex
+++ b/resume/eng.tex
@@ -196,8 +196,8 @@
       {\href{http://fi.ee.tsinghua.edu.cn}{Tsinghua University }}{Beijing, China}
       {\textbf{Research Assistant} in Future Communication \& Internet Lab}{Apr 2016 - Present (1.5 yr)}
       \resumeItemListStart
-	 \resumeItem{Published/Accepted: AAAI ICWSM, IEEE Globecom}\\
-	 \resumeItem{Submitted: ACM CoNEXT, ACM CIKM, IEEE TNSM}\\
+	 \resumeItem{Published/Accepted: AAAI ICWSM, IEEE Globecom, ACM CIKM}\\
+	 \resumeItem{Submitted: ACM CoNEXT, IEEE TNSM}\\
 	 \resumeItem{Several Projects in Big Data Mining \& User Behavior Analysis}\\
         \vspace{1mm}
 	 {- Including Online Video Consumption Behaviors Analysis, Online Shopping Behaviors Analysis, In-app user Clicking Behaviors Identification, etc.}\\
