--- a/CV/cv.tex
+++ b/CV/cv.tex
@@ -48,7 +48,7 @@
 \setlength{\marginparsep}{7pt} % Slightly increase the distance of the margin years from the contant
 \reversemarginpar
 
-\usepackage[xetex, bookmarks, colorlinks, breaklinks, pdftitle={Albert Einstein - vita},pdfauthor={Albert Einstein}]{hyperref} % PDF setup - set your name and the title of the document to be incorporated into the final PDF file meta-information
+\usepackage[xetex, bookmarks, colorlinks, breaklinks, pdftitle={Tzu-Heng Lin, Tsinghua University},pdfauthor={Tzu-Heng Lin}]{hyperref} % PDF setup - set your name and the title of the document to be incorporated into the final PDF file meta-information
 \hypersetup{linkcolor=blue,citecolor=blue,filecolor=black,urlcolor=MidnightBlue} % Link colors
 
 %----------------------------------------------------------------------------------------
@@ -87,8 +87,8 @@
 
 {\LARGE Lin, Tzu-Heng (Brian)}\\[0.4cm] % Your name
 \emph{Senior undergraduate student} (graduate: 2018)\\
-Department of Electronic Engineering\\
-Tsinghua University, Beijing, P.R.C\\% Your current or previous employment position
+\href{http://www.ee.tsinghua.edu.cn/}{Department of Electronic Engineering}\\
+\href{http://www.tsinghua.edu.cn/}{Tsinghua University}, Beijing, P.R.C\\% Your current or previous employment position
 Taiwanese citizen, Living in Beijing\\[1cm] 
 % Institute for Advanced Study\\ % Your address
 % Einstein Drive\\
@@ -129,8 +129,8 @@ Computer Vision
 %----------------------------------------------------------------------------------------
 
 \section*{Education}
-\years{2014-2018}\textsc{B.S.} in Electronic Information, Tsinghua University\\
-\years{2014-2018}\textsc{B.B.A.} in Management (2nd Degree), Tsinghua University
+\years{2014-2018}\textsc{B.S.} in Electronic Information, \href{http://www.tsinghua.edu.cn/}{Tsinghua University}\\
+\years{2014-2018}\textsc{B.B.A.} in Management (2nd Degree), \href{http://www.tsinghua.edu.cn/}{Tsinghua University}
 
 
 %----------------------------------------------------------------------------------------
@@ -139,18 +139,18 @@ Computer Vision
 
 \section*{Appointments held}
 \subsection*{Professional}
-\years{2017.2-}Research Software Engineer Intern, Owlii Inc.\\
-\years{2016.4-}Research Assistant, Future Internet \& Communication Lab, Tsinghua University\\
-\years{2016.7-2016.8}Summer Research Intern, Academia Sinica, Taiwan
+\years{2017.2-}Research Software Engineer Intern, \href{http://owlii.com}{Owlii Inc.}, Beijing\\
+\years{2016.4-}Research Assistant, \href{http://fi.ee.tsinghua.edu.cn}{Future Internet \& Communication Lab, Tsinghua University}, Beijing\\
+\years{2016.7-2016.8}Summer Research Intern, \href{http://dirl.iis.sinica.edu.tw/}{Data Insights Research Lab, Academia Sinica}, Taiwan
 \subsection*{Student Associations}
-\years{2015.9-2017.2}Vice Chair, THU MakerSpace\\
-\years{2015.7-2016.5}Vice Leader (Web Dev), Dept. of Web and Publicity, Student Asso.of Sci. \& Tech., EE, THU\\
+\years{2015.9-2017.2}Vice President, \href{http://thumaker.cn}{THU MakerSpace}\\
+\years{2015.7-2016.5}Vice Leader (Web Dev), Dept. of Web and Publicity, \href{http://eesast.com}{Student Asso.of Sci. \& Tech., EE, THU}\\
 \years{2015.9-2016.5}Vice Leader, Dept. of Competition, Student Asso.of Sci. \& Tech., THU
 
 
 \section*{Service to the profession}
 \years{2017}
-Reviewer, \emph{IEEE TNSM} (IEEE Transactions on Network and Service Management)
+Reviewer, \emph{\href{http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?reload=true&punumber=4275028}{IEEE TNSM (IF=3.314) (IEEE Transactions on Network and Service Management)}}
 
 
 
@@ -161,31 +161,31 @@ Reviewer, \emph{IEEE TNSM} (IEEE Transactions on Network and Service Management)
 
 \section*{Publications}
 \subsection*{Conference}
-\years{\textbf{ACM \\CIKM'17}}
+\years{\textbf{\href{http://cikm2017.org/}{ACM \\CIKM'17}}}
 Huan Yan, \textbf{Tzu-Heng Lin}, Gang Wang, Yong Li, Haitao Zheng, Depeng Jin and Ben Zhao.
 On Migratory Behavior in Video Consumption.
 In Proceedings of The 26th ACM International Conference on Information and Knowledge Management, Singapore, November 2017, to appear\\
-\years{\textbf{IEEE \\Globecom'17}}
+\years{\textbf{\href{http://globecom2017.ieee-globecom.org/}{IEEE \\Globecom'17}}}
 Huan Yan, \textbf{Tzu-Heng Lin}, Ming Zeng, Jing Wu, Jiaxin Huang,
 Yong Li, Depeng Jin.
 Characterizing the Usage of Mobile Video Service in Cellular Networks, 
 In Proceedings of 2017 IEEE Global Communications Conference: Communications Software,
 Services and Multimedia Apps, Singapore, Dec 2017, to appear\\
-\years{\textbf{AAAI \\ICWSM'17}}
+\years{\textbf{\href{http://www.icwsm.org/2017/index.php}{AAAI \\ICWSM'17}}}
 Huan Yan, \textbf{Tzu-Heng Lin}, Gang Wang, Yong Li, Haitao Zheng, Depeng Jin, Ben Y. Zhao.
 A First Look at User Switching Behaviors Over Multiple Video Content Providers. 
 In Proceedings of International AAAI Conference on Web and Social Media, Montreal, Canada,
 May 2017\\
-\years{\textbf{ACM \\CoNEXT'17}}
+\years{\textbf{\href{http://conferences2.sigcomm.org/co-next/2017/}{ACM \\CoNEXT'17}}}
 \textbf{Tzu-Heng Lin}, Yong Li, Pengyu Zhang.
 In-app User Clicking Behavior Identification via Mobile Traffic Mining.
 \textbf{Submitted to ACM CoNEXT'17}
 \subsection*{Journal}
-\years{\textbf{IEEE \\TNSM}}
+\years{\textbf{\href{http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?reload=true&punumber=4275028}{IEEE \\TNSM}}}
 Huan Yan, \textbf{Tzu-Heng Lin}, Chuhan Gao, Yong Li, Depeng Jin.
 On the Understanding of User Behaviors Over Multiple Video Content Providers.
 \textbf{Submitted to IEEE TNSM}\\
-\years{\textbf{Springer}}
+\years{\textbf{\href{https://link.springer.com/journal/11042}{Springer}}}
 Huan Yan, Zhifeng Wang, \textbf{Tzu-Heng Lin}, Yong Li, Depeng Jin.
 Profiling Users by Online Shopping Behaviors.
 \textbf{Submitted to Multimedia Tools and Applications, Springer}
@@ -205,18 +205,18 @@ Member of the \emph{Qi Chuang} Entrepreneurial Talent Training Program, Tsinghua
 \years{2014}
 Graduate from high school with the highest honor.\\
 College Admission Offers From: \\
-\emph {\small Tsinghua University (THU), Peking University (PKU), Hong Kong University (HKU), \\
-National Taiwan University (NTU), National Tsing Hua University (NTHU)}
+\emph {\small \href{http://www.tsinghua.edu.cn/}{Tsinghua University} (THU), \href{http://pku.edu.cn/}{Peking University} (PKU), \href{http://www.hku.hk/}{Hong Kong University} (HKU), \\
+\href{https://www.ntu.edu.tw/}{National Taiwan University} (NTU), \href{http://www.nthu.edu.tw/}{National Tsing Hua University} (NTHU)}
 
 
 \subsection*{Awards}
 \years{2016}
-Championship (as Team Leader), Tsinghua Make-a-thon 2016\\
+Championship (as Team Leader), \href{http://thumaker.cn/blog/2017%E5%88%9B%E5%AE%A2%E6%8C%91%E6%88%98%E8%B5%9B-%E6%8A%A5%E5%90%8D%E4%BB%85%E6%AD%A4%E4%B8%80%E5%91%A8/}{Tsinghua Make-a-thon} 2016\\
 \years{2015}
-3rd Prize (as Team Leader), Final, China-US Maker Competition, MoE, P.R.C \& Intel\\
-2nd Place (as Team Leader), Beijing, China-US Maker Competition, MoE, P.R.C \& Intel\\
-Championship (as Team Leader), Tsinghua Make-a-thon 2015\\
-3rd Prize (as Team Leader), Tsinghua Programming Contest
+3rd Prize (as Team Leader), Final, \href{https://www.chinaus-maker.org/}{China-US Maker Competition}, MoE, P.R.C \& Intel\\
+2nd Place (as Team Leader), Beijing, \href{https://www.chinaus-maker.org/}{China-US Maker Competition}, MoE, P.R.C \& Intel\\
+Championship (as Team Leader), \href{http://thumaker.cn/blog/2017%E5%88%9B%E5%AE%A2%E6%8C%91%E6%88%98%E8%B5%9B-%E6%8A%A5%E5%90%8D%E4%BB%85%E6%AD%A4%E4%B8%80%E5%91%A8/}{Tsinghua Make-a-thon} 2015\\
+3rd Prize (as Team Leader), \href{https://cpclash.eesast.com/}{Tsinghua Programming Contest} 2015
 \subsection*{Scholarships}
 \years{2016}
 Zheng Geru Scholarship for Comprehensive Performance, Tsinghua University\\
@@ -261,12 +261,12 @@ Signal Processing, Electronic Circuit Design
 \years{Experienced} git, Hadoop, Qt, CUDA, \LaTeX\\
                     Linux, OSX\\
 \years{Familiar} CMake, gcc, g++\\
-                 OpenCV, Dlib\\
+                 OpenCV, Dlib, Eigen, libigl (Contributor on Github)\\
                  Meshlab, Meshlabserver (Contributor on Github)\\
                  Weka, Tableau, theano, DL4J\\
                  gem5, Wireshark, Multisim, Modelsim\\
                  Arduino, Processing, SketchUp, 3D printer\\
-                 Web Dev (Django,Yii), iOS Dev (Xcode), Android Dev (Android Studio)
+                 Web Dev (Django,Yii, Bootstrap), iOS Dev (Xcode), Android Dev (Android Studio)
 \subsection*{Languages}
 \years{Native} Mandarin\\
 \years{Fluent}English (TOEFL 102, TOEIC 910, GEPT high-intermediate)\\
@@ -353,7 +353,7 @@ Leadership Development\\
 
 
 \section*{Projects}
-To be written.
+Please refer to http://lzhbrian.me
 
 
 
