--- a/CV/cv.tex
+++ b/CV/cv.tex
@@ -144,7 +144,7 @@ Computer Vision
 \years{2016.7-2016.8}Summer Research Intern, \href{http://dirl.iis.sinica.edu.tw/}{Data Insights Research Lab, Academia Sinica}, Taiwan
 \subsection*{Student Associations}
 \years{2015.9-2017.2}Vice President, \href{http://thumaker.cn}{THU MakerSpace}\\
-\years{2015.7-2016.5}Vice Leader (Web Dev), Dept. of Web and Publicity, \href{http://eesast.com}{Student Asso.of Sci. \& Tech., EE, THU}\\
+\years{2015.7-2016.5}Vice Leader (Web Dev), Dept. of Web \& Publicity, \href{http://eesast.com}{Student Asso.of Sci. \& Tech., EE, THU}\\
 \years{2015.9-2016.5}Vice Leader, Dept. of Competition, Student Asso.of Sci. \& Tech., THU
 
 
@@ -219,15 +219,15 @@ Championship (as Team Leader), \href{http://thumaker.cn/blog/2017%E5%88%9B%E5%AE
 3rd Prize (as Team Leader), \href{https://cpclash.eesast.com/}{Tsinghua Programming Contest} 2015
 \subsection*{Scholarships}
 \years{2016}
-Zheng Geru Scholarship for Comprehensive Performance, Tsinghua University\\
-Second Prize Scholarship for Taiwanese Student, Minister of Education, P.R.C\\
-Science and Technology Excellence Scholarship, Tsinghua University\\
-Social Work Excellence Scholarship, Tsinghua University\\
-Art and Cultural Excellence Scholarship, Tsinghua University\\
+\emph{Zheng Geru Scholarship} for Comprehensive Performance, Tsinghua University\\
+Second Prize, \emph{Taiwanese Student Scholarship}, Minister of Education, P.R.C\\
+\emph{Science and Technology} Excellence Scholarship, Tsinghua University\\
+\emph{Social Work} Excellence Scholarship, Tsinghua University\\
+\emph{Art and Cultural} Excellence Scholarship, Tsinghua University\\
 \years{2015} 
-First Prize Scholarship for Taiwanese Student, Minister of Education, P.R.C\\
-Science and Technology Excellence Scholarship, Tsinghua University\\
-Social Work Excellence Scholarship, Tsinghua University
+First Prize, \emph{Taiwanese Student Scholarship}, Minister of Education, P.R.C\\
+\emph{Science and Technology} Excellence Scholarship, Tsinghua University\\
+\emph{Social Work} Excellence Scholarship, Tsinghua University
 
 
 
@@ -260,16 +260,17 @@ Signal Processing, Electronic Circuit Design
 \subsection*{Tools \& Softwares}
 \years{Experienced} git, Hadoop, Qt, CUDA, \LaTeX\\
                     Linux, OSX\\
-\years{Familiar} CMake, gcc, g++\\
+\years{Familiar} 
                  OpenCV, Dlib, Eigen, libigl (Contributor on Github)\\
                  Meshlab, Meshlabserver (Contributor on Github)\\
                  Weka, Tableau, theano, DL4J\\
                  gem5, Wireshark, Multisim, Modelsim\\
                  Arduino, Processing, SketchUp, 3D printer\\
+                 CMake, gcc, g++\\
                  Web Dev (Django,Yii, Bootstrap), iOS Dev (Xcode), Android Dev (Android Studio)
 \subsection*{Languages}
 \years{Native} Mandarin\\
-\years{Fluent}English (TOEFL 102, TOEIC 910, GEPT high-intermediate)\\
+\years{Fluent}English (TOEFL 102, IELTS 7.5, TOEIC 910, GEPT high-intermediate)\\
 \years{Basic} Taiwanese, Shanghainese
 
 
