--- a/CV/cv.tex
+++ b/CV/cv.tex
@@ -87,8 +87,8 @@
 
 {\LARGE Lin, Tzu-Heng (Brian)}\\[0.4cm] % Your name
 \emph{Senior undergraduate student} (graduate: 2018)\\
-\href{http://www.ee.tsinghua.edu.cn/}{Department of Electronic Engineering}\\
-\href{http://www.tsinghua.edu.cn/}{Tsinghua University}, Beijing, P.R.C\\% Your current or previous employment position
+\href{http://www.ee.tsinghua.edu.cn/publish/eeen/index.html}{Department of Electronic Engineering}\\
+\href{http://www.tsinghua.edu.cn/publish/newthuen/index.html}{Tsinghua University}, Beijing, P.R.C\\% Your current or previous employment position
 Taiwanese citizen, Living in Beijing\\[1cm] 
 % Institute for Advanced Study\\ % Your address
 % Einstein Drive\\
@@ -129,8 +129,8 @@ Computer Vision
 %----------------------------------------------------------------------------------------
 
 \section*{Education}
-\years{2014-2018}\textsc{B.S.} in Electronic Information, \href{http://www.tsinghua.edu.cn/}{Tsinghua University}\\
-\years{2014-2018}\textsc{B.B.A.} in Management (2nd Degree), \href{http://www.tsinghua.edu.cn/}{Tsinghua University}
+\years{2014-2018}\textsc{B.S.} in \href{http://www.ee.tsinghua.edu.cn/publish/eeen/index.html}{Electronic Information}, \href{http://www.tsinghua.edu.cn/publish/newthuen/index.html}{Tsinghua University}\\
+\years{2014-2018}\textsc{B.B.A.} in \href{http://ug.sem.tsinghua.edu.cn/second/managem/gxmjs.html}{Management (2nd Degree)}, \href{http://www.tsinghua.edu.cn/publish/newthuen/index.html}{Tsinghua University}
 
 
 %----------------------------------------------------------------------------------------
@@ -144,8 +144,8 @@ Computer Vision
 \years{2016.7-2016.8}Summer Research Intern, \href{http://dirl.iis.sinica.edu.tw/}{Data Insights Research Lab, Academia Sinica}, Taiwan
 \subsection*{Student Associations}
 \years{2015.9-2017.2}Vice President, \href{http://thumaker.cn}{THU MakerSpace}\\
-\years{2015.7-2016.5}Vice Leader (Web Dev), Dept. of Web \& Publicity, \href{http://eesast.com}{Student Asso.of Sci. \& Tech., EE, THU}\\
-\years{2015.9-2016.5}Vice Leader, Dept. of Competition, Student Asso.of Sci. \& Tech., THU
+\years{2015.7-2016.5}Vice Leader (Web Dev), Dept. of Web \& Publicity, \href{http://eesast.com}{Student Asso.of Sci. \& Tech., EE, THU (EESAST)}\\
+\years{2015.9-2016.5}Vice Leader, Dept. of Competition, Student Asso.of Sci. \& Tech., THU (THUSAST)
 
 
 \section*{Service to the profession}
@@ -199,9 +199,9 @@ Profiling Users by Online Shopping Behaviors.
 \section*{Honors \& Awards}
 \subsection*{Honors}
 \years{2016}
-Maker Representative, Tsinghua University\\
+\href{http://lzhbrian.me/old/posts_figure/maker.jpeg}{Maker Representative}, Tsinghua University\\
 \years{2015}
-Member of the \emph{Qi Chuang} Entrepreneurial Talent Training Program, Tsinghua Universtiy\\
+Member of the \href{http://news.tsinghua.edu.cn/publish/thunews/10303/2013/20131128144743953412518/20131128144743953412518_.html}{\emph{Qi Chuang} Entrepreneurial Talent Training Program}, Tsinghua Universtiy\\
 \years{2014}
 Graduate from high school with the highest honor.\\
 College Admission Offers From: \\
@@ -219,13 +219,13 @@ Championship (as Team Leader), \href{http://thumaker.cn/blog/2017%E5%88%9B%E5%AE
 3rd Prize (as Team Leader), \href{https://cpclash.eesast.com/}{Tsinghua Programming Contest} 2015
 \subsection*{Scholarships}
 \years{2016}
-\emph{Zheng Geru Scholarship} for Comprehensive Performance, Tsinghua University\\
-Second Prize, \emph{Taiwanese Student Scholarship}, Minister of Education, P.R.C\\
+\emph{Zheng Geru Scholarship (Top 35/260)} for Comprehensive Performance, Tsinghua University\\
+Second Prize (Top 3/50), \href{http://www.moe.gov.cn/jyb_xxgk/gk_gbgg/moe_0/moe_1133/moe_1134/tnull_14169.html}{\emph{Taiwanese Student Scholarship}}, Minister of Education, P.R.C\\
 \emph{Science and Technology} Excellence Scholarship, Tsinghua University\\
 \emph{Social Work} Excellence Scholarship, Tsinghua University\\
 \emph{Art and Cultural} Excellence Scholarship, Tsinghua University\\
 \years{2015} 
-First Prize, \emph{Taiwanese Student Scholarship}, Minister of Education, P.R.C\\
+First Prize (Top 2/50), \href{http://www.moe.gov.cn/jyb_xxgk/gk_gbgg/moe_0/moe_1133/moe_1134/tnull_14169.html}{\emph{Taiwanese Student Scholarship}}, Minister of Education, P.R.C\\
 \emph{Science and Technology} Excellence Scholarship, Tsinghua University\\
 \emph{Social Work} Excellence Scholarship, Tsinghua University
 
@@ -256,18 +256,19 @@ Signal Processing, Electronic Circuit Design
 
 \subsection*{Programming Languages}
 \years{Experienced} Python, Matlab, C/C++\\
-\years{Familiar} Shell Script, R, Verilog, Java, HTML, CSS, SQL
+\years{Familiar} Shell Script, R, Verilog, Java, SQL
 \subsection*{Tools \& Softwares}
 \years{Experienced} git, Hadoop, Qt, CUDA, \LaTeX\\
                     Linux, OSX\\
 \years{Familiar} 
+                 pandas, scikit-learn, theano, DL4J, Weka, Tableau\\
                  OpenCV, Dlib, Eigen, libigl (Contributor on Github)\\
                  Meshlab, Meshlabserver (Contributor on Github)\\
-                 Weka, Tableau, theano, DL4J\\
                  gem5, Wireshark, Multisim, Modelsim\\
-                 Arduino, Processing, SketchUp, 3D printer\\
-                 CMake, gcc, g++\\
-                 Web Dev (Django,Yii, Bootstrap), iOS Dev (Xcode), Android Dev (Android Studio)
+                 Arduino, Processing, SketchUp, 3D printing\\
+                 Jupyter Notebook, Vim, tmux, CMake, gcc, g++\\
+                 Web Dev (Django,Yii, Bootstrap, HTML, CSS) \\
+                 iOS Dev (Xcode), Android Dev (Android Studio)
 \subsection*{Languages}
 \years{Native} Mandarin\\
 \years{Fluent}English (TOEFL 102, IELTS 7.5, TOEIC 910, GEPT high-intermediate)\\
@@ -281,12 +282,12 @@ Signal Processing, Electronic Circuit Design
 \section*{Courses taken}
 
 \subsection*{Online MOOC}
-\years{CS344} Intro to Parallel Programming (GPU) (Udacity)
+\years{CS344} \href{https://cn.udacity.com/course/intro-to-parallel-programming--cs344}{Intro to Parallel Programming (CUDA GPU) (Udacity)}
 
 \subsection*{B.S. in Electronic Information}
 \years{Computer \\Science \\related}
-Introduction to Information Science and Technology\\
-Introduction to Electronic Information Science and Technology (1)(2)\\
+Intro to Information Science and Technology\\
+Intro to Electronic Information Science and Technology (1)(2)\\
 Operating System\\
 Mordern Computer Architecture\\
 Communications and Networks\\
@@ -305,7 +306,7 @@ Linear Algebra (1)(2)\\
 Discrete Mathematics\\
 Probability and Stochastic Processes (1)(2)\\
 Functions of Complex Variables and Equations of Mathematical Physics\\
-Introduction of Mathematical Modelling\\
+Intro of Mathematical Modelling\\
 \years{AI and ML \\related}
 Pattern Recognition\\
 Media and Cognition\\
@@ -354,7 +355,7 @@ Leadership Development\\
 
 
 \section*{Projects}
-Please refer to http://lzhbrian.me
+Please refer to \href{http://lzhbrian.me}{http://lzhbrian.me}
 
 
 
